# QtAudioWake

./: CMakeLists.txt  README.md  build.sh  resources.qrc
src/: components.cpp  components.h  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  tonegenerator.cpp  tonegenerator.h
styles/: style.qss
